--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 asgiref==3.3.1
 Django==3.0.5
+django-csp==3.7
 djongo==1.3.3
+gunicorn==20.0.4
 Pillow==8.0.1
+pkg-resources==0.0.0
 pymongo==3.11.1
 pytz==2020.4
 soupsieve==2.0.1
 sqlparse==0.2.4
 style==1.1.0
 update==0.0.1
+whitenoise==5.2.0
