--- a/config/Used/gunicorn.service
+++ b/config/Used/gunicorn.service
@@ -3,10 +3,10 @@ Description=gunicorn daemon
 After=network.target
 
 [Service]
-User=hmj977_email
+User=iseeua1228
 Group=www-data
-WorkingDirectory=/home/hmj977_email/web/
-ExecStart=/home/hmj977_email/web/venv/bin/gunicorn --workers 3 --bind unix:/home/hmj977_email/web/run/gunicorn.sock mysite.wsgi:application
+WorkingDirectory=/home/iseeua1228/deploy/
+ExecStart=/home/iseeua1228/deploy/venv/bin/gunicorn --workers 3 --bind unix:/home/iseeua1228/deploy/run/gunicorn.sock mysite.wsgi:application
 
 [Install]
 WantedBy=multi-user.target
